 5. Fix config module compilation when kwin headers are not installed.
 6. Dont apply background opacity setting to plasma - seems to cuase an icon for
    plasma to appear in the taskbar!
 7. Dont draw thumbs on circular sliders - they dont look good!
 8. Fix black bottom corners on fully rounded windows when not using compositing.
 9. Dont draw transparent windows if compositing is turned off.
10. Fix odd kwin behaviour when style set to use transparent backgrounds.

1.5.0
-----
 1. Add option to set progressbar colour.
 2. Add options to have squared sliders and/or scrollbar sliders even when
    general setting set to round.
 3. Add option to use menubar colours for popup menus.
 4. Add option to set alpha values used to draw etch/shadow effect.
 5. Fixed background of Gtk2 style combo menus.
 6. Add option to specify colour of titlebar button icons.
 7. Add option to use menubar colour for titlebar when a window has a menubar visible.
    (Only valid when not blending titlebars and not using window border colours for
    menubars)
 8. 'Fix' toolbar handles in OpenOffice.org
 9. Add options to set opacity for window and poup-menu backgrounds. The KDE SC4.5
    blur-behind hint is set when the opacity!=100
10. Don't alter agua 'shine' for mouse-overed disabled widgets.
11. Fix KDE SC4.5 sidebar buttons when set to not draw as standard buttons.
12. Display kwin options in style config dialog, and import/export these when
    importing/exporting QtCurve themes.
13. If drawing a spin widget with no edit field (as happens in KOffice's progress/spin
    widget), then dont draw the background behind the spin arrows.
14. Fix right margin of tab labels.
15. Fix scrollview frame when squared and etched.
16. Fix QDial 'handle' position.
17. Replace custom window-drag code with that of Oxygen.
18. Change window-drag options to allow dragging via toolbars and other empty areas.
19. Add option to draw separator between titlebar and window contents.