@@ -989,6 +989,7 @@ QtCurveConfig::QtCurveConfig(QWidget *parent)
     connect(titlebarButtons_hideOnInactiveWindow, SIGNAL(toggled(bool)), SLOT(updateChanged()));
 
     connect(noBgndGradientApps, SIGNAL(editingFinished()), SLOT(updateChanged()));
+    connect(noBgndOpacityApps, SIGNAL(editingFinished()), SLOT(updateChanged()));
     connect(noBgndImageApps, SIGNAL(editingFinished()), SLOT(updateChanged()));
     connect(useQtFileDialogApps, SIGNAL(editingFinished()), SLOT(updateChanged()));
     connect(menubarApps, SIGNAL(editingFinished()), SLOT(updateChanged()));
@@ -2574,6 +2575,7 @@ void QtCurveConfig::setOptions(Options &opts)
     }
 
     opts.noBgndGradientApps=toSet(noBgndGradientApps->text());
+    opts.noBgndOpacityApps=toSet(noBgndOpacityApps->text());
     opts.noBgndImageApps=toSet(noBgndImageApps->text());
     opts.useQtFileDialogApps=toSet(useQtFileDialogApps->text());
     opts.menubarApps=toSet(menubarApps->text());
@@ -2875,6 +2877,7 @@ void QtCurveConfig::setWidgetOptions(const Options &opts)
     populateShades(opts);
 
     noBgndGradientApps->setText(toString(opts.noBgndGradientApps));
+    noBgndOpacityApps->setText(toString(opts.noBgndOpacityApps));
     noBgndImageApps->setText(toString(opts.noBgndImageApps));
     useQtFileDialogApps->setText(toString(opts.useQtFileDialogApps));
     menubarApps->setText(toString(opts.menubarApps));
@@ -3144,6 +3147,7 @@ bool QtCurveConfig::settingsChanged(const Options &opts)
          customGradient!=opts.customGradient ||
 
          toSet(noBgndGradientApps->text())!=opts.noBgndGradientApps ||
+         toSet(noBgndOpacityApps->text())!=opts.noBgndOpacityApps ||
          toSet(noBgndImageApps->text())!=opts.noBgndImageApps ||
          toSet(useQtFileDialogApps->text())!=opts.useQtFileDialogApps ||
          toSet(menubarApps->text())!=opts.menubarApps ||
