@@ -3522,69 +3522,83 @@
         </widget>
        </item>
        <item row="2" column="0">
+        <widget class="QLabel" name="label_81">
+         <property name="text">
+          <string>No background opacity:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="KLineEdit" name="noBgndOpacityApps">
+         <property name="whatsThis">
+          <string>&lt;p&gt;Comma seperated list of names of applications which should not use the background opacity setting. &lt;/p&gt;&lt;p&gt;Use &lt;i&gt;gtk&lt;/i&gt; to disable for all Gtk2 applications.&lt;/p&gt;</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
         <widget class="QLabel" name="label_82y">
          <property name="text">
           <string>No menu stripe:</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="1">
+       <item row="3" column="1">
         <widget class="KLineEdit" name="noMenuStripeApps">
          <property name="whatsThis">
           <string>&lt;p&gt;Comma seperated list of names of applications which should not use the menu stripe setting. &lt;/p&gt;&lt;p&gt;Use &lt;i&gt;gtk&lt;/i&gt; to disable for all Gtk2 applications.&lt;/p&gt;</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
+       <item row="4" column="0">
         <widget class="QLabel" name="label_83">
          <property name="text">
           <string>Use Qt file dialog:</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="1">
+       <item row="4" column="1">
         <widget class="KLineEdit" name="useQtFileDialogApps">
          <property name="whatsThis">
           <string>Comma seperated list of names of Qt4 applications which should not use the KDE4 file dialog.</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="0">
+       <item row="5" column="0">
         <widget class="QLabel" name="label_83a">
          <property name="text">
           <string>Save menubar visibility:</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="1">
+       <item row="5" column="1">
         <widget class="KLineEdit" name="menubarApps">
          <property name="whatsThis">
           <string>&lt;p&gt;Comma seperated list of names of KDE4 applications where QtCurve needs to manually save whether the menubar is hidden or not.&lt;/p&gt;&lt;p&gt;Use &lt;i&gt;kde&lt;/i&gt; to set for all KDE applications. The menubar state of Gtk2 applications is always manually saved.&lt;/p&gt;</string>
          </property>
         </widget>
        </item>
-       <item row="6" column="0">
+       <item row="7" column="0">
         <widget class="QLabel" name="label_83x">
          <property name="text">
           <string>Don't apply parent-less dialog fix:</string>
          </property>
         </widget>
        </item>
-       <item row="6" column="1">
+       <item row="7" column="1">
         <widget class="KLineEdit" name="noDlgFixApps">
          <property name="whatsThis">
           <string>&lt;p&gt;Comma seperated list of names of applications where QtCurve should not attempt to fix parent-less dialogs.&lt;/p&gt;&lt;p&gt;Use &lt;i&gt;gtk&lt;/i&gt; to disable for all Gtk2 applications, and &lt;i&gt;kde&lt;/i&gt; to disable for all KDE applications&lt;/p&gt;</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="0">
+       <item row="6" column="0">
         <widget class="QLabel" name="label_89">
          <property name="text">
           <string>Save statusbar visibility:</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="1">
+       <item row="6" column="1">
         <widget class="KLineEdit" name="statusbarApps">
          <property name="whatsThis">
           <string>&lt;p&gt;Comma seperated list of names of KDE4 applications where QtCurve needs to manually save whether the statusbar is hidden or not.&lt;/p&gt;&lt;p&gt;Use &lt;i&gt;kde&lt;/i&gt; to set for all KDE applications. The statusbar state of Gtk2 applications is always manually saved.&lt;/p&gt;</string>
